@@ -1,0 +1,8 @@
+package org.gudy.azureus2.plugins.network;
+
+/**
+ * @since 3.0.5.3
+ */
+public interface TransportFilter {
+
+}
